--- a/estilos.css
+++ b/estilos.css
@@ -13,12 +13,8 @@ a {
 }
 
 /**Anchors al pasar por encima de ellos*/
-a:hover {
+#navbar a:hover {
 	color: blueviolet;
-}
-
-/**Imagenes*/
-img {
 }
 
 /**Asi accedo a los id: # y selecciono el elemento que quiero modificar, en este caso la lista: ul*/
@@ -38,7 +34,7 @@ img {
 
 /**Cada elemento anchor a dentro de la etiqueta navbar*/
 #navbar li a {
-	padding: 15px;
+	padding: 22px 12px;
 	display: inline-block;
 	text-decoration: none;
 	font-size: 20px;
@@ -58,13 +54,13 @@ img {
 /**Para darle el efecto a los links cuando paso por arriba*/
 #navbar li a:hover {
 	background-color: #00000021;
+	border-radius: 1em;
 }
 
 /**Navbar completa*/
 #navbar {
 	border-bottom: 1px solid rgb(0, 0, 0);
 	border-top: 1px solid rgb(0, 0, 0);
-	display: block;
 }
 
 /**Estilos del menu hamburguesa. Acceso a class*/
@@ -121,5 +117,20 @@ footer {
 	.responsive {
 		width: 100%;
 		height: auto;
+	}
+}
+@media only screen and (max-width: 822px) {
+	#carrousel {
+		clear: both;
+		padding: 5%;
+	}
+	#navbar li {
+		float: none;
+		display: block;
+	}
+	#navbar li a {
+		padding: 5px;
+		text-align: left;
+		width: 100%;
 	}
 }
