--- a/estilos.css
+++ b/estilos.css
@@ -27,6 +27,10 @@ a {
 	z-index: 100;
 }
 
+.lista-sm {
+	display: block;
+}
+
 /**Cada elemento de lista li dentro de la etiqueta navbar*/
 #navbar li {
 	float: left;
@@ -40,6 +44,10 @@ a {
 	font-size: 20px;
 	text-align: center;
 	color: #161481;
+}
+
+#navbar li.active a {
+	color: red;
 }
 
 #navbar li form {
@@ -113,6 +121,17 @@ footer {
 	height: auto;
 }
 
+@media only screen and (max-width: 1257px) {
+	#redes {
+		display: none;
+	}
+}
+@media only screen and (max-width: 1115px) {
+	#buscador {
+		display: none;
+	}
+}
+
 @media only screen and (max-width: 600px) {
 	.responsive {
 		width: 100%;
@@ -124,6 +143,11 @@ footer {
 		clear: both;
 		padding: 5%;
 	}
+
+	.lista-sm {
+		display: none;
+	}
+
 	#navbar li {
 		float: none;
 		display: block;
@@ -132,5 +156,20 @@ footer {
 		padding: 5px;
 		text-align: left;
 		width: 100%;
+	}
+
+	/**Muestro el menu hamburguesa*/
+	.menu-hamburguesa {
+		display: block;
+		text-align: left;
+	}
+
+	#carrousel li {
+		/**
+		border: 1px solid
+		max-width: 1180px;
+		*/
+		width: auto;
+		padding: 12px 12px;
 	}
 }
